--- a/.github/workflows/docker-build-publish.yml
+++ b/.github/workflows/docker-build-publish.yml
@@ -2,7 +2,7 @@ name: Docker Build and Publish
 
 on:
   push:
-    branches: [ "tt-initial" ]
+    branches: [ "main" ]
   # Allows manual trigger from the Actions tab
   workflow_dispatch:
 
